# lol-jy-bot

./: README.md  bot.py  bot_lambda.py  pyproject.toml  quotes.py  quotes.txt
