[tool.poetry]
name = "lol-jy-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lol_jy_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
